@startuml ej1
skinparam ClassBackgroundColor transparent
skinparam NoteBackgroundColor transparent
skinparam classAttributeIconSize 0 
skinparam ClassBorderThickness 1.3
skinparam ClassBorderColor Black
skinparam NoteBorderColor Black
skinparam ArrowColor Black
skinparam shadowing false

interface FileSystem{
    +getTamano(): double
    +getFecha(): LocalDate
    +getNombre(): String
    +esArchivo(): boolean
}

class Archivo{
    -nombre: String
    -fecha: LocalDate
    -tamano: double
    +getTamano(): double
    +getFecha(): LocalDate
    +getNombre(): String
    +esArchivo(): boolean
}

class Directorio{
    -nombre: String
    -fecha: LocalDate
    +getTamano(): double
    +getFecha(): LocalDate
    +getNombre(): String
    +esArchivo(): boolean
    +tamanoTotalOcupado(): int
    +archivoMasGrande(): Archivo
    +archivoMasNuevo(): Archivo
}

FileSystem <|.. Archivo
FileSystem <|.. Directorio
FileSystem <--o Directorio : hijos

@enduml